<resources>
    <string name="app_name">Crystal</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_weekly">Weekly</string>
    <string name="title_monthly">Monthly</string>
    <string name="action_settings">Settings</string>
    <string name="add_event">Add Event</string>
    <string name="search_event">Search Event</string>
    <string name="name">Name</string>
    <string name="select_date">Select Date</string>
    <string name="select">Select</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="set">Set</string>
    <string name="reminder">Reminder</string>
    <string name="all_day">All-Day</string>
    <string name="notes">Notes</string>
    <string name="notifications">Notifications</string>
    <string name="pound"># of</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="multipleDays">Multiple Days</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="agenda">Agenda</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="add_notif">Add Notif</string>
    <string name="delete">Delete</string>
    <string name="del">Del</string>
    <string name="edit">Edit</string>
    <string name="push">Push</string>
    <string name="save_event">Save Event</string>
    <string name="five">5</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="timeMeasureOptions">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
        <item>weeks</item>
    </string-array>


</resources>
