<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_date_select"
        android:icon="@drawable/ic_date_select"
        android:title="@string/select_date"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add_event"
        android:icon="@drawable/ic_add_event"
        android:title="@string/add_event"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search_event"
        android:icon="@drawable/ic_search_event"
        android:title="@string/search_event"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:visible="true" />

</menu>