<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clairvoyance.crystal.NewEvent"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="253dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="147dp"
        android:layout_height="273dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/notes"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/reminder"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintLeft_toRightOf="@+id/scrollView2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:text="@string/all_day"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintLeft_toRightOf="@+id/scrollView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="190dp"
        android:layout_height="561dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="58dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="18dp"
                android:layout_weight="0.32"
                android:paddingTop="10dp"
                android:text="@string/start_date"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/button"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:text="@string/select"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="18dp"
                android:layout_weight="0.32"
                android:paddingTop="10dp"
                android:text="@string/start_time"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:text="@string/set"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="18dp"
                android:layout_weight="0.32"
                android:paddingTop="10dp"
                android:text="@string/end_date"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/button4"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_weight="0.32"
                android:text="@string/select"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="18dp"
                android:layout_weight="0.32"
                android:paddingTop="10dp"
                android:text="@string/end_time"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/button2"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_weight="0.32"
                android:text="@string/set"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
