<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clairvoyance.crystal.EditEvent"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editEventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editToolbar" />

    <EditText
        android:id="@+id/editEventNotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_black"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/notes"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:lines="3"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingStart="4dp"
        android:paddingTop="2dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/editSaveButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/editSaveButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/save_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66"
        tools:layout_editor_absoluteY="336dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/editToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEventName"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/editMainNewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="258dp">

            <LinearLayout
                android:id="@+id/editCheckRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEventNotes">

                <CheckBox
                    android:id="@+id/editReminderCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/reminder" />

                <CheckBox
                    android:id="@+id/editAllDayCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/all_day" />

                <CheckBox
                    android:id="@+id/editMultipleDayCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/multipleDays" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/editStartDateRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editStartDateTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.25"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/date"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/editStartDate"
                    android:layout_width="102dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/editStartDateSet"
                    style="@android:style/Widget.Holo.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.73"
                    android:text="@string/select"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editStartTimeRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editStartTimeTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.25"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/start_time"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/editStartTime"
                    android:layout_width="102dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/editStartTimeSet"
                    style="@android:style/Widget.Holo.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.73"
                    android:text="@string/set"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/editEndDateRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/editEndDateTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.25"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/end_date"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/editEndDate"
                    android:layout_width="102dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/editEndDateSet"
                    style="@android:style/Widget.Holo.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.73"
                    android:text="@string/select"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/editEndTimeRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editEndTimeTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.25"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/end_time"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/editEndTime"
                    android:layout_width="102dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/editEndTimeSet"
                    style="@android:style/Widget.Holo.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.73"
                    android:text="@string/set"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/editTextView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/notifications"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/editPushNotifFirstRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editPushNotificationNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="4"
                    android:background="@drawable/border_black"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/pound"
                    android:inputType="number"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/five"
                    android:textColor="@color/colorText"
                    android:textColorHint="#808080"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/editPushNotificationTypes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/edit_add_notif"
                    style="@android:style/Widget.Holo.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_notif" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>

